feat: update spectator management to use SpectateManager for teleportation and watching